--- a/Debra/index.html
+++ b/Debra/index.html
@@ -50,7 +50,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="plot.js"></script>
-  <script src="data.js"></script>
+  <!-- <script src="data.js"></script> -->
 
 </body>
 
