--- a/Debra/index.html
+++ b/Debra/index.html
@@ -33,11 +33,11 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-12">
         <div id="bar"></div>
       </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
+      <div class="col-md-12">
+        <div id="pie"></div>
       </div>
     </div>
     <div class="row">
@@ -50,7 +50,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="plot.js"></script>
-  <!-- <script src="data.js"></script> -->
+  <!-- <script src="pie.js"></script> -->
 
 </body>
 
